--- a/requirements.txt
+++ b/requirements.txt
@@ -157,6 +157,7 @@ traitlets==5.14.3
 transformers==4.49.0
 triton==3.2.0
 typer==0.15.2
+TTS==0.22.0
 typing_extensions==4.12.2
 tzdata==2025.1
 urllib3==2.3.0
